docs/api/qiskit/0.25/qiskit.aqua.components.neural_networks.DiscriminativeNetwork.mdx
---
title: DiscriminativeNetwork (v0.25)
description: API reference for qiskit.aqua.components.neural_networks.DiscriminativeNetwork in qiskit v0.25
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.components.neural_networks.DiscriminativeNetwork
---

<span id="qiskit-aqua-components-neural-networks-discriminativenetwork" />

# qiskit.aqua.components.neural\_networks.DiscriminativeNetwork

<Class id="qiskit.aqua.components.neural_networks.DiscriminativeNetwork" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/aqua/components/neural_networks/discriminative_network.py" signature="DiscriminativeNetwork" modifiers="class">
  Base class for discriminative Quantum or Classical Neural Networks.

  This method should initialize the module but raise an exception if a required component of the module is not available.

  ### \_\_init\_\_

  <Function id="qiskit.aqua.components.neural_networks.DiscriminativeNetwork.__init__" signature="__init__()" modifiers="abstract">
    Initialize self. See help(type(self)) for accurate signature.
  </Function>

  ## Methods

  |                                                                                                                                                                                   |                                                                                                        |
  | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------ |
  | [`__init__`](#qiskit.aqua.components.neural_networks.DiscriminativeNetwork.__init__ "qiskit.aqua.components.neural_networks.DiscriminativeNetwork.__init__")()                    | Initialize self.                                                                                       |
  | [`get_label`](#qiskit.aqua.components.neural_networks.DiscriminativeNetwork.get_label "qiskit.aqua.components.neural_networks.DiscriminativeNetwork.get_label")(x)                | Apply quantum/classical neural network to the given input sample and compute the respective data label |
  | [`loss`](#qiskit.aqua.components.neural_networks.DiscriminativeNetwork.loss "qiskit.aqua.components.neural_networks.DiscriminativeNetwork.loss")(x, y\[, weights])                | Loss function used for optimization                                                                    |
  | [`save_model`](#qiskit.aqua.components.neural_networks.DiscriminativeNetwork.save_model "qiskit.aqua.components.neural_networks.DiscriminativeNetwork.save_model")(snapshot\_dir) | Save discriminator model                                                                               |
  | [`set_seed`](#qiskit.aqua.components.neural_networks.DiscriminativeNetwork.set_seed "qiskit.aqua.components.neural_networks.DiscriminativeNetwork.set_seed")(seed)                | Set seed.                                                                                              |
  | [`train`](#qiskit.aqua.components.neural_networks.DiscriminativeNetwork.train "qiskit.aqua.components.neural_networks.DiscriminativeNetwork.train")(data, weights\[, penalty, …]) | Perform one training step w\.r.t to the discriminator’s parameters                                     |

  ### get\_label

  <Function id="qiskit.aqua.components.neural_networks.DiscriminativeNetwork.get_label" signature="get_label(x)" modifiers="abstract">
    Apply quantum/classical neural network to the given input sample and compute the respective data label

    **Parameters**

    **x** (*Discriminator*) – input, i.e. data sample.

    **Raises**

    **NotImplementedError** – not implemented
  </Function>

  ### loss

  <Function id="qiskit.aqua.components.neural_networks.DiscriminativeNetwork.loss" signature="loss(x, y, weights=None)" modifiers="abstract">
    Loss function used for optimization

    **Parameters**

    *   **x** (`Iterable`) – output.
    *   **y** (`Iterable`) – the data point
    *   **weights** (`Optional`\[`ndarray`]) – Data weights.

    **Returns**

    Loss w\.r.t to the generated data points.

    **Raises**

    **NotImplementedError** – not implemented
  </Function>

  ### save\_model

  <Function id="qiskit.aqua.components.neural_networks.DiscriminativeNetwork.save_model" signature="save_model(snapshot_dir)" modifiers="abstract">
    Save discriminator model

    **Parameters**

    **snapshot\_dir** (`str`) – Directory to save the model

    **Raises**

    **NotImplementedError** – not implemented
  </Function>

  ### set\_seed

  <Function id="qiskit.aqua.components.neural_networks.DiscriminativeNetwork.set_seed" signature="set_seed(seed)" modifiers="abstract">
    Set seed.

    **Parameters**

    **seed** (*int*) – seed

    **Raises**

    **NotImplementedError** – not implemented
  </Function>

  ### train

  <Function id="qiskit.aqua.components.neural_networks.DiscriminativeNetwork.train" signature="train(data, weights, penalty=False, quantum_instance=None, shots=None)" modifiers="abstract">
    Perform one training step w\.r.t to the discriminator’s parameters

    **Parameters**

    *   **data** (`Iterable`) – Data batch.
    *   **weights** (`Iterable`) – Data sample weights.
    *   **penalty** (`bool`) – Indicate whether or not penalty function is applied to the loss function. Ignored if no penalty function defined.
    *   **quantum\_instance** ([*QuantumInstance*](qiskit.aqua.QuantumInstance "qiskit.aqua.QuantumInstance")) – used to run Quantum network. Ignored for a classical network.
    *   **shots** (`Optional`\[`int`]) – Number of shots for hardware or qasm execution. Ignored for classical network

    **Returns**

    with discriminator loss and updated parameters.

    **Return type**

    dict

    **Raises**

    **NotImplementedError** – not implemented
  </Function>
</Class>

